# matf-ppgr-homeworks

./: .gitignore  README.md
homework_01/: invisible_point.cpp
homework_02/: projection_matrices.ipynb  removing_projective_distortion.ipynb
homework_03/: CMakeLists.txt  space_movements.cpp
homework_04/camera_matrix_3D_scene/: CMakeLists.txt  camera.cpp  camera.h  main.cpp
homework_04/camera_parameters/: CMakeLists.txt  camera.cpp
homework_05/python/: 3d_reconstruction.ipynb  3d_reconstruction_16_vertices.ipynb
